# scaled-int

./: Cargo.toml  README.md  libtest_nostd_cast.rlib  libtest_nostd_float3.rlib
benches/: arithmetic.rs  parse.rs  scientific.rs  serde.rs
cycles/04-math-ops-perf/: cycle.md
cycles/05-scientific-notation/: cycle.md
cycles/06-serde-feature/: cycle.md
cycles/07-no-std/: cycle.md
cycles/07-no-std/no-std-benchmark-and-profile/: checklist.json  task.md
cycles/07-no-std/no-std-design-and-plan/: checklist.json  task.md
cycles/07-no-std/no-std-final-benchmark/: checklist.json  task.md
cycles/07-no-std/no-std-implement/: checklist.json  task.md
cycles/07-no-std/no-std-reeval-and-improve/: checklist.json  task.md
docs/: bench-results.md  design.md  math-ops-perf-bench-results.md  math-ops-perf-design.md  math-ops-perf-final-bench.md  math-ops-perf-reeval.md  no-std-bench-results.md  no-std-design.md  no-std-final-bench.md  no-std-reeval.md  project-status-2026-05.md  scientific-notation-bench-results.md  scientific-notation-design.md  scientific-notation-final-bench.md  scientific-notation-reeval.md  serde-bench-results.md  serde-design.md  serde-final-bench.md  serde-reeval.md  udecimal64-bench-results.md  udecimal64-design.md
src/: decimal64.rs  lib.rs  parse.rs  parse_unsigned.rs  scientific.rs  serde_as.rs  serde_impls.rs  udecimal64.rs
