[package]
name = "decimal64"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std    = ["serde?/std"]
alloc  = ["serde?/alloc"]
serde  = ["dep:serde", "alloc"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[lib]
name = "decimal64"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.8.2"
rust_decimal = "1.42.0"
bigdecimal = "0.4.10"
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
serde_test = "1"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "scientific"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]
