[package]
name = "scaled_int"
version = "0.2.2"
edition = "2024"
description = "Fast fixed point arithmetic that only uses i64/u64 as internal representation."
license = "MIT"
homepage = "https://github.com/dunnock/scaled-int"
repository = "https://github.com/dunnock/scaled-int"
documentation = "https://docs.rs/scaled_int"

[features]
default = ["std"]
std    = ["serde?/std"]
alloc  = ["serde?/alloc"]
serde  = ["dep:serde", "alloc"]

[dependencies]
itoa = "1"
serde = { version = "1.0", optional = true, default-features = false }

[lib]
name = "scaled_int"
path = "src/lib.rs"

[dev-dependencies]
atoi_simd = { version = "0.16.1", default-features = false }
memchr = { version = "2", default-features = false }
criterion = "0.8.2"
rust_decimal = "1.42.0"
bigdecimal = "0.4.10"
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
serde_test = "1"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "scientific"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]
